samples/ut/access/FailPrivate07.z2
using org.z2legacy.samples.ut.access.Foo;

namespace org.z2legacy.samples.ut.access;

class FailPrivate07 {
	def @main() {
		System.Out << Foo.test() << "\n";
	}
}